# vstwebview

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  linux.yml  mac.yml  windows.yml
cmake/: NuGet.cmake
demo/panner/: CMakeLists.txt
demo/panner/include/: plugcontroller.h  version.h
demo/panner/resource/: index.html  main.js  style.css
demo/panner/source/: plugcontroller.cpp
include/vstwebview/: bindings.h  webview.h  webview_controller_bindings.h  webview_message_listener.h  webview_pluginview.h
src/vstwebview/: webview.cc  webview_controller_bindings.cc  webview_message_listener.cc  webview_pluginview.cc
src/vstwebview/gtk/: webview_gtk.cc
src/vstwebview/osx/: webview_osx.cpp  webview_osx.h  webview_osx.mm
src/vstwebview/win32/: webview_edge_chromium.cc  webview_edge_chromium.h  webview_win32.cc  webview_win32.h
